<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DF121212"
    tools:context=".MainActivity"
    tools:ignore="Autofill">

    <TextView
        android:id="@+id/txtDPI"
        android:layout_width="22dp"
        android:layout_height="19dp"
        android:layout_marginEnd="16dp"
        android:text="@string/DPI"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/txtSENS"
        app:layout_constraintEnd_toStartOf="@+id/txtINPUTDPI"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtINPUTDPI"
        android:layout_width="93dp"
        android:layout_height="40dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="17dp" />

    <EditText
        android:id="@+id/txtINPUTCM360"
        android:layout_width="93dp"
        android:layout_height="40dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txtINPUTYAW"
        app:layout_constraintStart_toEndOf="@+id/txtCM360"
        app:layout_constraintStart_toStartOf="@+id/txtINPUTSENS"
        app:layout_constraintTop_toBottomOf="@+id/txtINPUTSENS" />

    <EditText
        android:id="@+id/txtINPUTSENS"
        android:layout_width="93dp"
        android:layout_height="40dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txtINPUTCM360"
        app:layout_constraintStart_toEndOf="@+id/txtSENS"
        app:layout_constraintStart_toStartOf="@+id/txtINPUTDPI"
        app:layout_constraintTop_toBottomOf="@+id/txtINPUTDPI" />

    <EditText
        android:id="@+id/txtINPUTYAW"
        android:layout_width="93dp"
        android:layout_height="40dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="OW = 0.0066"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF"
        android:textColorHint="#66FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtYAW"
        app:layout_constraintStart_toEndOf="@+id/txtYAW"
        app:layout_constraintStart_toStartOf="@+id/txtINPUTCM360"
        app:layout_constraintTop_toTopOf="@+id/txtYAW" />

    <TextView
        android:id="@+id/txtSENS"
        android:layout_width="67dp"
        android:layout_height="22dp"
        android:text="@string/Sensitivity"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/txtCM360"
        app:layout_constraintStart_toStartOf="@+id/txtDPI"
        app:layout_constraintTop_toBottomOf="@+id/txtDPI" />

    <TextView
        android:id="@+id/txtCM360"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cm_360"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/txtYAW"
        app:layout_constraintStart_toStartOf="@+id/txtSENS"
        app:layout_constraintTop_toBottomOf="@+id/txtSENS" />

    <TextView
        android:id="@+id/txtYAW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Yaw"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup4"
        app:layout_constraintStart_toStartOf="@+id/txtCM360"
        app:layout_constraintTop_toBottomOf="@+id/txtCM360" />

    <Button
        android:id="@+id/btnCLEAR"
        android:layout_width="173dp"
        android:layout_height="40dp"
        android:backgroundTint="#F8BBD0"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/list"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCALCULATE" />

    <CheckBox
        android:id="@+id/cbSENS"
        android:layout_width="100dp"
        android:layout_height="28dp"
        android:buttonTint="#F8BBD0"
        android:text="@string/find_sens"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/cbASHE"
        app:layout_constraintEnd_toStartOf="@+id/list"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cbASHE"
        app:layout_constraintTop_toTopOf="@+id/cbASHE" />

    <EditText
        android:id="@+id/txtINPUTCS"
        android:layout_width="95dp"
        android:layout_height="40dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txtINPUTNS"
        app:layout_constraintStart_toStartOf="@+id/txtINPUTNS"
        app:layout_constraintTop_toBottomOf="@+id/cbSENS" />

    <Button
        android:id="@+id/btnCALCULATE"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="173dp"
        android:layout_height="40dp"
        android:backgroundTint="#F8BBD0"
        android:text="@string/calculate"
        app:layout_constraintBottom_toTopOf="@+id/btnCLEAR"
        app:layout_constraintEnd_toStartOf="@+id/list"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtINPUTNS" />

    <TextView
        android:id="@+id/txtNEWSCOPE"
        android:layout_width="83dp"
        android:layout_height="38dp"
        android:text="@string/new_scope_or_sensitivity"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btnCALCULATE"
        app:layout_constraintStart_toStartOf="@+id/txtCURSCOPE"
        app:layout_constraintTop_toBottomOf="@+id/txtCURSCOPE" />

    <CheckBox
        android:id="@+id/cbASHE"
        android:layout_width="74dp"
        android:layout_height="28dp"
        android:buttonTint="#F8BBD0"
        android:text="@string/ashe"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/txtCURSCOPE"
        app:layout_constraintEnd_toStartOf="@+id/cbSENS"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup4" />

    <EditText
        android:id="@+id/txtINPUTNS"
        android:layout_width="95dp"
        android:layout_height="40dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnCALCULATE"
        app:layout_constraintEnd_toStartOf="@+id/list"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtNEWSCOPE"
        app:layout_constraintTop_toBottomOf="@+id/txtINPUTCS" />

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="170dp"
        android:layout_height="128dp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toStartOf="@+id/list"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtINPUTYAW">

        <RadioButton
            android:id="@+id/rbtnSENSALLDPI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#F8BBD0"
            android:checked="true"
            android:text="@string/sensitivity_all_dpi"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rbtnCM360"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#F8BBD0"
            android:text="@string/Find_cm_360"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rbtnSENSCM360"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#F8BBD0"
            android:text="@string/sensitivity_from_cm_360"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rbtnRSS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#F8BBD0"
            android:text="@string/relative_scope_sensitivity"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtCURSCOPE"
        android:layout_width="66dp"
        android:layout_height="34dp"
        android:text="@string/current_scope"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txtNEWSCOPE"
        app:layout_constraintStart_toStartOf="@+id/cbASHE"
        app:layout_constraintTop_toBottomOf="@+id/cbASHE" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="220dp"
        android:background="#F8BBD0"
        app:layout_constraintBottom_toTopOf="@+id/cbSENS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup4" />

    <ListView
        android:id="@+id/list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00121212"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>